update : notif dll frontend
